<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C7_Землетрясения</string>
    <string name="quake_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.atom</string>
    
    <string name="TextVievProviderCount">Всего элементов в Источнике</string>
    <string name="TextVievCurrentDate">Текущая дата</string>
    <string name="TextVievDateSelectedItem">Дата последнего элемента</string>
    <string name="TextVievDateBoolean">Текущая дата старше даты элемента</string>
    
    <string name="menu_update">Обновить Землетрясения</string>
    <string name="menu_preferences">Настройки</string>
    
    <string name="dialog_quaketime">Время Землетрясения</string>
        
    <string name="prefs_auto_update_title">Авто обновление</string>
    <string name="prefs_auto_update_summary">Выберите, чтобы включить автоматическое обновление</string>
    
    <string name="prefs_update_freq_title">Выбрать частоту</string>
    <string name="prefs_update_freq_summary">Выберите частоту обновления списка землетрясений</string>
    
    <string name="prefs_quake_mag_title">Магнитуда</string>
    <string name="prefs_quake_mag_summary">Выберите величину землетрясения для списка</string>

</resources>